Fix illegal reflective access as mentionned in the documentation. https://docs.hazelcast.org/docs/4.1/manual/html-single/index.html#running-in-modular-java