@@ -82,5 +82,8 @@ SYS_PROPS+=" -Dmainzelliste.serverurl=$MAINZELLISTE_SERVER_URL"
 SYS_PROPS+=" -Dmainzelliste.idtypes=$MAINZELLISTE_ID_TYPES"
 SYS_PROPS+=" -Dmainzelliste.apikey=$MAINZELLISTE_API_KEY"
 
+# https://docs.hazelcast.org/docs/4.1/manual/html-single/index.html#running-in-modular-java
+# Hazelcast needs the java.se module and access to the following Java packages for a proper work
+SYS_PROPS+=" --add-modules java.se --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.management/sun.management=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED"
 
 eval java $SYS_PROPS -jar /app/karnak-mvc-5.0.0-SNAPSHOT.jar
